Oculta los nuevos productos en pantallas pequeñas para mejorar la visualización del banner

--- a/css/banner_style.css
+++ b/css/banner_style.css
@@ -90,6 +90,11 @@
 }
 
 @media (max-width: 768px) {
+
+    .new-product {
+        display: none;
+    }
+
     .banner {
         padding: 1rem;
         min-height: 600px;
