Añade estilo a la clase fade-in-2 y cambia el párrafo a un encabezado para mejorar la presentación del contenido en la sección de redes sociales

--- a/css/redes_style.css
+++ b/css/redes_style.css
@@ -200,6 +200,11 @@ body {
     color: var(--like-color);
 }
 
+.fade-in-2 {
+    font-size: 1.5rem;
+    font-weight: normal;
+}
+
 /*Boton de mostrar más*/
 .load-more-btn {
     display: flex;
