--- a/css/cart.css
+++ b/css/cart.css
@@ -5,11 +5,11 @@ body {
     background-color: #f5f5f5;
 }
 
-.container {
+.Cartcontainer {
     max-width: auto;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #f5f5f5;
 }
 
 .cashback {
@@ -147,7 +147,7 @@ body {
 .security-items {
     display: flex;
     justify-content: center;
-    gap: 55px;
+    gap: 130px;
 }
 
 .item {
