--- a/css/info_style.css
+++ b/css/info_style.css
@@ -1,4 +1,6 @@
+/*Selector universal que coincide con todos los elementos para la pagina info.html*/
 *{
+    /*margin y padding a 0 para poder editar el resto del css*/
     padding: 0;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -32,11 +34,12 @@ a.letras{
 }
 
 /*Cuando pasas el cursor por las opciones*/
+/*Efecto hover, efecto visual al pasar el cursor*/
 nav li.medio:hover{
     background-color: gainsboro;
 }
 
-/*Borrar esto por alguna razon hace que el header se loquee*/
+/*Permite evitar un error con el orden de la pagina*/
 .container{
     position: relative;
 }
@@ -49,6 +52,7 @@ div.busqueda{
 }
 
 /*Efectos de la pestaña busqueda*/
+/*Input permite la personalizacion de campos de texto*/
 .busqueda input{
     width: 0px;
     height: 40px;
@@ -60,6 +64,7 @@ div.busqueda{
     transition: all 0.6s ease;
 }
 
+/*Pestaña o boton de busqueda*/
 .btn{
     position: absolute;
     top: 0;
@@ -74,40 +79,38 @@ div.busqueda{
     cursor: pointer;
 }
 
+/*Edicion del boton de busqueda*/
 .busqueda:hover input{
     width: 240px;
 }
-
 .busqueda input:focus{
     width: 240px;
 }
 
+/*Edita todo el contenido del contenedor "detalles"*/
 .detalles{
     flex: 1;
     padding: 10px;
 }
-
 .detalles h1 {
     font-size: 22px;
     margin-bottom: 10px;
 }
-
 .detalles p {
     font-size: 14px;
     line-height: 1.6;
     margin-bottom: 20px;
 }
-
 .detalles .price {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
 }
-
 .detalles label {
     font-size: 14px;
 }
 
+/*Selecciona el button (Añadir carrito) y las opciones de talla para darle un diseño*/
 .detalles select,
         .detalles button {
             padding: 10px;
@@ -118,6 +121,7 @@ div.busqueda{
             width: 100%;
 }
 
+/*Efecto de cambio de color al pasar el cursor por el boton Añadir al carrito*/
 .detalles button {
     background-color: black;
     color: #fff;
@@ -125,7 +129,6 @@ div.busqueda{
     cursor: pointer;
     transition: background-color 0.3s;
 }
-
 .detalles button:hover {
     background-color: gray;
 }
@@ -141,6 +144,7 @@ div.busqueda{
     overflow: hidden;
 }
 
+/*Añade estilos al contenedor de la descripcion del producto*/
 .descripcion{
     width: 125vh;
     height: 60vh;
@@ -148,6 +152,7 @@ div.busqueda{
     margin: 5%
 }
 
+/*Alinea la posicion de la lista de caracteristicas*/
 ul {
     list-style-position: inside;
     margin-left: 1px;
