--- a/css/cart.css
+++ b/css/cart.css
@@ -4,7 +4,12 @@ body {
     padding: 0;
     background-color: #f5f5f5;
 }
-
+.containerCard{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    gap: 25px;
+}
 .Cartcontainer {
     max-width: auto;
     margin: 0 auto;
@@ -38,32 +43,18 @@ body {
     gap: 20px;
 }
 
-/* IMAGEN DEL PRODUCTO */
-
-.producto-vista {
-    display: grid;
-}
-
-.cart-item {
-    display: flex;
-    align-items: center;
-    background-color: #fff;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    flex: 3;
-}
-
-.img-1 {
-    width: 200px;
-    height: 200px;
-}
 
 /* PARA LA PROMOCIÓN */
+.information {
+    display: flex;
+    justify-content: space-around;
+}
 
 .resumen {
-    display: grid;
-    justify-content: end;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin-left: 20px;
 }
 
 .promotion-section {
@@ -163,7 +154,15 @@ body {
     margin-bottom: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 873px) {
+    .containerCard {
+        display: flex;
+        flex-direction: column;
+    }
+    .information {
+        display: flex;
+        flex-direction: column;
+    }
     .resumen {
       max-width: 90%;
       padding: 1rem;
