--- a/css/cart.css
+++ b/css/cart.css
@@ -154,6 +154,15 @@ body {
     margin-bottom: 10px;
 }
 
+@media (max-width: 1327px) {
+    .containerCard{
+        display: flex;
+        flex-direction: column;
+
+        gap: 25px;
+    }
+}
+
 @media (max-width: 873px) {
     .containerCard {
         display: flex;
