--- a/css/slide_cart_style.css
+++ b/css/slide_cart_style.css
@@ -32,6 +32,7 @@
     border-color: transparent;
     font-size: 20px;
     border-radius: 40px;
+    cursor: pointer;
   }
 
   #buttonCloseSlide:hover {
@@ -108,6 +109,7 @@
     border-radius: 20px;
     margin: 0px 0px 10px 0px;
     font-size: 17px;
+    cursor: pointer;
   }
 
   #buttonContinuarCompra:hover {
