--- a/css/pago_style.css
+++ b/css/pago_style.css
@@ -109,11 +109,11 @@ body {
 }
 
 .payment-option__logo--visa {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 324'%3E%3Cpath fill='%23142787' d='M651.3,0.2h-118c-18.4,0-32.2,5.1-40.5,23.4L375.7,296.9h92.6c0,0,13.8-36.4,16.9-44.4c9.2,0,91.3,0.1,103,0.1c2.4,10.3,9.8,44.3,9.8,44.3h81.8L651.3,0.2L651.3,0.2z M506.9,197.2c6.6-17,32-82.3,32-82.3c-0.5,0.8,6.6-17.1,10.7-28.2l5.4,25.5c0,0,15.4,70.2,18.6,85H506.9L506.9,197.2z'/%3E%3C/svg%3E");
+  background-image: url("../img/visa-logo.png");
 }
 
 .payment-option__logo--mastercard {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 131.39 86.9'%3E%3Cpath d='M48.37 15.14h34.66v56.61H48.37z' fill='%23ff5f00'/%3E%3Cpath d='M51.94 43.45a35.94 35.94 0 0113.75-28.3 36 36 0 100 56.61 35.94 35.94 0 01-13.75-28.31z' fill='%23eb001b'/%3E%3Cpath d='M120.5 65.76V64.6h.5v-.24h-1.19v.24h.47v1.16zm2.31 0v-1.4h-.36l-.42 1-.42-1h-.36v1.4h.26V64.7l.39.91h.27l.39-.91v1.06zM123.94 43.45a36 36 0 01-58.25 28.3 36 36 0 000-56.61 36 36 0 0158.25 28.3z' fill='%23f79e1b'/%3E%3C/svg%3E");
+  background-image: url("../img/mastercard-logo.png");
 }
 
 .payment-option__logo--pagoefectivo {
@@ -121,7 +121,7 @@ body {
 }
 
 .payment-option__logo--paypal {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 124 33'%3E%3Cpath d='M46.211 6.749h-6.839a.95.95 0 0 0-.939.802l-2.766 17.537a.57.57 0 0 0 .564.658h3.265a.95.95 0 0 0 .939-.803l.746-4.73a.95.95 0 0 1 .938-.803h2.165c4.505 0 7.105-2.18 7.784-6.5.306-1.89.013-3.375-.872-4.415-.97-1.142-2.694-1.746-4.985-1.746z' fill='%23253B80'/%3E%3C/svg%3E");
+  background-image: url("../img/paypal-logo.png");
 }
 
 .payment-option__name {
